register api with Auth0
