# server/api/controllers/auth/router.ts
@@ -1,0 +1,5 @@
+import express from 'express';
+import controller from './controller'
+
+export default express.Router()
+    .post('/register' , controller.register);
